fix vid widget aspct ratio jumping

--- a/src/components/video-widget.scss
+++ b/src/components/video-widget.scss
@@ -7,12 +7,14 @@
     iframe {
         width: 100%;
         aspect-ratio: 16/9;
+        height: auto;
         display: block;
     }
 
     .vidplaceholder {
         position: relative;
         padding: 0;
+        border: 0 none transparent;
 
         >img {
             object-fit: cover;
